# powerplan

./: powerplan.service  setup.cfg
powerplan/: config.py  cpu.py  log.py  powerplan.py  powersupply.py  process.py  status.py
