[metadata]
name = powerplan
version = 0.8.7
description = An automatic power management tool
author = Bruna Al
author_email = bruno.at@protonmail.com
url = 'https://github.com/haptein/powerplan'
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
	License :: OSI Approved :: BSD License
	Indended Audience :: End Users/Desktop
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
packages = powerplan
python_requires = >=3.6
install_requires =
	psutil
	argparse

[options.entry_points]
console_scripts =
	powerplan = powerplan.powerplan:main
